[gd_scene load_steps=8 format=3 uid="uid://e0ebcv1n8jnq"]

[ext_resource type="Script" path="res://Scripts/InventoryWindow.gd" id="1_7kqbx"]
[ext_resource type="PackedScene" uid="uid://crck2fhgayxhn" path="res://Scenes/InventoryContainerListItem.tscn" id="2_xfgb3"]
[ext_resource type="PackedScene" uid="uid://khk40t8u7x5b" path="res://Scenes/UI/WearableSlot.tscn" id="3_1udct"]
[ext_resource type="FontFile" uid="uid://chm7lbcdeyo0h" path="res://Roboto-Bold.ttf" id="6_xpf2l"]
[ext_resource type="PackedScene" uid="uid://y2iul2r3nysx" path="res://Scenes/UI/CtrlInventoryStackedCustom.tscn" id="8_f75fl"]
[ext_resource type="PackedScene" uid="uid://c4g8ymi0lhkyy" path="res://Scenes/UI/EquipmentSlot.tscn" id="9_tpx1u"]

[sub_resource type="Theme" id="Theme_6v4rg"]
default_font = ExtResource("6_xpf2l")
default_font_size = 13

[node name="InventoryWindow" type="Control" node_paths=PackedStringArray("proximity_inventory_control", "inventory_control", "containerList", "EquipmentSlotList", "LeftHandEquipmentSlot", "RightHandEquipmentSlot", "tooltip", "tooltip_item_name", "tooltip_item_description", "tool_tip_description_panel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7kqbx")
proximity_inventory_control = NodePath("HBoxContainer/ProximityInventoryControl/CtrlInventoryStackedCustomProx")
inventory_control = NodePath("HBoxContainer/PlayerInventoryControl/CtrlInventoryStackedCustom")
containerList = NodePath("HBoxContainer/ContainersList")
containerListItem = ExtResource("2_xfgb3")
EquipmentSlotList = NodePath("HBoxContainer/EquipmentSlotList")
WearableSlotScene = ExtResource("3_1udct")
LeftHandEquipmentSlot = NodePath("HBoxContainer/EquipmentSlotList/LeftHandEquipment/LeftHandEquipmentSlot")
RightHandEquipmentSlot = NodePath("HBoxContainer/EquipmentSlotList/RightHandEquipment/RightHandEquipmentSlot")
tooltip = NodePath("Tooltip")
tooltip_item_name = NodePath("Tooltip/Panel/ItemName")
tooltip_item_description = NodePath("Tooltip/ToolTipDescriptionPanel/Description")
tool_tip_description_panel = NodePath("Tooltip/ToolTipDescriptionPanel")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.698039, 0.729412, 0.788235, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContainersList" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="ProximityInventoryControl" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/ProximityInventoryControl"]
layout_mode = 2
text = "Nearby container:"

[node name="CtrlInventoryStackedCustomProx" parent="HBoxContainer/ProximityInventoryControl" instance=ExtResource("8_f75fl")]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="TransferUI" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TransferAllRightButton" type="Button" parent="HBoxContainer/TransferUI"]
layout_mode = 2
text = "->>"

[node name="TransferRightButton" type="Button" parent="HBoxContainer/TransferUI"]
layout_mode = 2
text = "->"

[node name="TransferLeftButton" type="Button" parent="HBoxContainer/TransferUI"]
layout_mode = 2
text = "<-"

[node name="TransferAllLeftButton" type="Button" parent="HBoxContainer/TransferUI"]
layout_mode = 2
text = "<<-"

[node name="PlayerInventoryControl" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="HBoxContainer/PlayerInventoryControl"]
layout_mode = 2
text = "inventory:"

[node name="CtrlInventoryStackedCustom" parent="HBoxContainer/PlayerInventoryControl" instance=ExtResource("8_f75fl")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
max_weight = 100

[node name="EquipmentSlotList" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="LeftHandEquipment" type="HBoxContainer" parent="HBoxContainer/EquipmentSlotList"]
layout_mode = 2

[node name="LeftHandEquipmentSlot" parent="HBoxContainer/EquipmentSlotList/LeftHandEquipment" node_paths=PackedStringArray("myInventoryCtrl", "otherHandSlot") instance=ExtResource("9_tpx1u")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
myInventoryCtrl = NodePath("../../../PlayerInventoryControl/CtrlInventoryStackedCustom")
otherHandSlot = NodePath("../../RightHandEquipment/RightHandEquipmentSlot")

[node name="Label" type="Label" parent="HBoxContainer/EquipmentSlotList/LeftHandEquipment"]
layout_mode = 2
text = "Left hand"

[node name="RightHandEquipment" type="HBoxContainer" parent="HBoxContainer/EquipmentSlotList"]
layout_mode = 2

[node name="RightHandEquipmentSlot" parent="HBoxContainer/EquipmentSlotList/RightHandEquipment" node_paths=PackedStringArray("myInventoryCtrl", "otherHandSlot") instance=ExtResource("9_tpx1u")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
myInventoryCtrl = NodePath("../../../PlayerInventoryControl/CtrlInventoryStackedCustom")
otherHandSlot = NodePath("../../LeftHandEquipment/LeftHandEquipmentSlot")
is_left_slot = false

[node name="Label" type="Label" parent="HBoxContainer/EquipmentSlotList/RightHandEquipment"]
layout_mode = 2
text = "Right hand"

[node name="Tooltip" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 242.0
offset_bottom = 115.0
pivot_offset = Vector2(0, 173)
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "kjkgkjghkjjhkg"

[node name="Panel" type="Panel" parent="Tooltip"]
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 241.0
offset_bottom = 33.0
size_flags_vertical = 3

[node name="ItemName" type="Label" parent="Tooltip/Panel"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 32.0
theme_override_colors/font_color = Color(0.921569, 0.596078, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_xpf2l")
theme_override_font_sizes/font_size = 20
text = "Item name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ToolTipDescriptionPanel" type="Panel" parent="Tooltip"]
layout_mode = 2
offset_left = 1.0
offset_top = 35.0
offset_right = 241.0
offset_bottom = 115.0
size_flags_vertical = 3

[node name="Description" type="Label" parent="Tooltip/ToolTipDescriptionPanel"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 32.0
theme = SubResource("Theme_6v4rg")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_xpf2l")
theme_override_font_sizes/font_size = 13
text = "Item description"
autowrap_mode = 3

[connection signal="equip_left" from="HBoxContainer/ProximityInventoryControl/CtrlInventoryStackedCustomProx" to="." method="_on_ctrl_inventory_stacked_custom_equip_left"]
[connection signal="equip_right" from="HBoxContainer/ProximityInventoryControl/CtrlInventoryStackedCustomProx" to="." method="_on_ctrl_inventory_stacked_custom_equip_right"]
[connection signal="button_up" from="HBoxContainer/TransferUI/TransferAllRightButton" to="." method="_on_transfer_all_right_button_button_up"]
[connection signal="button_up" from="HBoxContainer/TransferUI/TransferRightButton" to="." method="_on_transfer_right_button_button_up"]
[connection signal="button_up" from="HBoxContainer/TransferUI/TransferLeftButton" to="." method="_on_transfer_left_button_button_up"]
[connection signal="button_up" from="HBoxContainer/TransferUI/TransferAllLeftButton" to="." method="_on_transfer_all_left_button_button_up"]
[connection signal="equip_left" from="HBoxContainer/PlayerInventoryControl/CtrlInventoryStackedCustom" to="." method="_on_ctrl_inventory_stacked_custom_equip_left"]
[connection signal="equip_right" from="HBoxContainer/PlayerInventoryControl/CtrlInventoryStackedCustom" to="." method="_on_ctrl_inventory_stacked_custom_equip_right"]
